# CursedRay

./: .ccls  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
include/: Camera.hpp  Constants.hpp  Framebuffer.hpp  HWDevice.hpp  HWDeviceOptions.hpp  Hit.hpp  IO.hpp  Log.hpp  Material.hpp  NCDevice.hpp  Random.hpp  Ray.hpp  Scene.hpp  Sphere.hpp
kernels/: clear_color.cl
src/: Camera.cpp  CursedRay.cpp  Framebuffer.cpp  HWDevice.cpp  Log.cpp  Material.cpp  NCDevice.cpp  Scene.cpp  Sphere.cpp  main.cpp
